--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -1,23 +1,31 @@
+/* 중앙 정렬 */
+
+/* border */
 .status-bar {
   display: flex;
   justify-content: center;
   padding: 5px 3px;
 }
 
+/* element */
 .status-bar__column {
   width: 33%;
 }
 
+/* Middle one */
 .status-bar__column:nth-child(2) {
   display: flex;
   justify-content: center;
 }
 
+/* Last one */
 .status-bar__column:last-child {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
+
+/* ----------- */
 
 .status-bar__column .fa-battery-full {
   margin: 0px 5px;
