--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 @import "reset.css";
-
+@import "variables.css";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 
-@import "status-bar.css";
+@import "status-bar.css"; /* status bar */
 
 body {
   font-family: "Open Sans", sans-serif;
 }
 
+/* status bar : import*/
+
+/* header */
 .welcome-header {
   margin: 90px 0px;
   text-align: center;
@@ -25,4 +28,29 @@ body {
   width: 60%;
   opacity: 0.7;
   margin-bottom: 90px;
+}
+
+/* form */
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 30px;
+}
+
+#login-form input {
+  border: none;
+  padding: 15px 0px;
+  font-size: 18px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 25px;
+  transition: border-color 0.3s ease-in-out;
+}
+
+#login-form input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+#login-form input:focus {
+  border-color: var(--yellow);
 }
