--- a/Assignment/10me.css
+++ b/Assignment/10me.css
@@ -52,6 +52,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: white;
+  box-shadow: 0px 12px whitesmoke;
 }
 
 .search form {
@@ -64,12 +65,6 @@
   font-size: 25px;
   margin-left: 15px;
   width: 90%;
-}
-
-.search input:focus {
-  border: white;
-  background-color: thistle;
-  transition: border-color 1s ease-in-out gold;
 }
 
 /* ----------main---------- */
@@ -88,7 +83,7 @@
 }
 
 .book {
-  height: 300px;
+  height: 100%;
   margin: 0 10px;
   display: flex;
   justify-content: space-between;
@@ -97,6 +92,7 @@
 .book img {
   height: 300px;
   width: 200px;
+  border: 1px solid gray;
   border-radius: 10px;
 }
 
@@ -170,6 +166,29 @@
 }
 
 /* ----------Top Adventures---------- */
+
+.tav {
+  overflow-x: scroll;
+  display: flex;
+}
+
+.ta__content {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.ta__cover {
+  margin: 5px;
+}
+
+.ta__star {
+  display: flex;
+  justify-content: center;
+  color: gold;
+  margin: 10px;
+}
 
 /* ----------Popular authors---------- */
 
