--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,6 +5,9 @@
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
 }
 
 /* element */
