--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,28 @@
 /* components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/alt-screen-header.css";
+@import "components/user-components.css";
+@import "components/badge.css";
+@import "components/dot.css";
+@import "components/icons-row.css";
 
 /* screen */
 @import "screen/login.css";
+@import "screen/friends.css";
+@import "screen/find.css";
+@import "screen/more.css";
+@import "screen/settings.css";
+@import "screen/chat.css";
 
 body {
+  color: #2e363e;
   font-family: "Open Sans", sans-serif;
-  height: 1000vh;
+  height: 100vh;
+  padding-top: 30px;
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
