--- a/css/screen/chat.css
+++ b/css/screen/chat.css
@@ -165,7 +165,7 @@
   transition: all 0.3s ease-in-out;
 }
 
-.reply:focus-within input {
+.reply input:focus {
   width: 93vw;
   transform: translateX(-13%) translateY(-80px);
 }
